Create Global Exception Handler and implement getAllProduct Api and create Custom Exception and ExceptionDto